--- a/style.css
+++ b/style.css
@@ -5,9 +5,8 @@ body {
   margin: 0;
   line-height: 1.6;
 }
-
 header {
-  background-color: #8fb9a8;
+  background-color: #4A8C8A;
   color: white;
   text-align: center;
   padding: 30px 15px;
