--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* ---------- Base ---------- */
 body {
   font-family: 'Roboto', Arial, sans-serif;
-  background-color: red !important;;
+  background-color: #f7f7f7;
   color: #333;
   margin: 0;
   line-height: 1.6;
