--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ header {
   align-items: center;
   gap: 20px;
 
-  background-color: #c1dee6; /* bleu ciel pastel */
+  background-color: #6e7172; /* bleu ciel pastel */
   color: #333;
 
   padding: 20px 30px;
